force-app/main/default/objects/metazoa3__snapshot_perm__c/metazoa3__snapshot_perm__c.object-meta.xml
<CustomObject>
    <description>This is an administrative object for Snapshot Org Management. This object controls the feature set Snapshot provides to licensed users.</description>
    <label>Snapshot Permission</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshot Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>