force-app/main/default/objects/metazoa3__snapshot_perm__c/fields/metazoa3__perm_data__c.field-meta.xml
<CustomField>
    <fullName>metazoa3__perm_data__c</fullName>
    <label>Perm Data</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>