force-app/main/default/objects/metazoa3__snapshot_perm__c/fields/metazoa3__user_list__c.field-meta.xml
<CustomField>
    <fullName>metazoa3__user_list__c</fullName>
    <label>User List</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>